applied GridSearchCV to RF and result improved

--- a/titanic/titanic.ipynb
+++ b/titanic/titanic.ipynb
@@ -385,6 +385,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Accuracy is always different. Use K-fold cross validation to get an average."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 132,
    "metadata": {},
