LGBM model with hyperparam tuning

--- a/spaceship titanic/spaceship_titanic.ipynb
+++ b/spaceship titanic/spaceship_titanic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,10 @@
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.ensemble import RandomForestClassifier"
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from lazypredict.Supervised import LazyClassifier\n",
+    "import lightgbm as lgbm"
    ]
   },
   {
@@ -1066,8 +1069,255 @@
     "final_predictions = rf_final.predict(test_data)\n",
     "result = pd.DataFrame({\"PassengerId\":test_data_og['PassengerId'],\n",
     "                        'Transported': final_predictions.astype(bool)})\n",
-    "print(result.head())\n",
-    "result.to_csv('./final_submission.csv',index=False)"
+    "result.to_csv('./final_submission.csv',index=False)\n",
+    "# gives 0.787 score"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hyperparameter Tuning\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'criterion': 'log_loss', 'max_depth': 10, 'n_estimators': 500}"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "param_grid = {'n_estimators':[100,200,500,800],\n",
+    "                'max_depth': [5,10,15],\n",
+    "                'criterion': ['gini','entropy','log_loss']}\n",
+    "\n",
+    "rf = RandomForestClassifier()\n",
+    "rf_CV = GridSearchCV(estimator = rf, param_grid = param_grid, cv = 5)\n",
+    "\n",
+    "rf_CV.fit(train_features,train_labels)\n",
+    "\n",
+    "rf_CV.best_params_\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf_final = RandomForestClassifier(criterion= 'log_loss', max_depth= 10, n_estimators= 500)\n",
+    "rf_final.fit(train_data,train_data_og['Transported'])\n",
+    "final_predictions = rf_final.predict(test_data)\n",
+    "result = pd.DataFrame({\"PassengerId\":test_data_og['PassengerId'],\n",
+    "                        'Transported': final_predictions.astype(bool)})\n",
+    "result.to_csv('./final_submission.csv',index=False)\n",
+    "# gives 0.79237 score"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lazy Prediction:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  7%|▋         | 2/29 [00:00<00:07,  3.43it/s]e:\\Coding prac\\lib\\site-packages\\sklearn\\svm\\_base.py:1244: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n",
+      "e:\\Coding prac\\lib\\site-packages\\sklearn\\svm\\_base.py:1244: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n",
+      "e:\\Coding prac\\lib\\site-packages\\sklearn\\svm\\_base.py:1244: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n",
+      "e:\\Coding prac\\lib\\site-packages\\sklearn\\svm\\_base.py:1244: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n",
+      "e:\\Coding prac\\lib\\site-packages\\sklearn\\svm\\_base.py:1244: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n",
+      " 34%|███▍      | 10/29 [00:03<00:05,  3.49it/s]e:\\Coding prac\\lib\\site-packages\\sklearn\\semi_supervised\\_label_propagation.py:227: RuntimeWarning: invalid value encountered in divide\n",
+      "  probabilities /= normalizer\n",
+      " 41%|████▏     | 12/29 [00:05<00:09,  1.86it/s]e:\\Coding prac\\lib\\site-packages\\sklearn\\semi_supervised\\_label_propagation.py:227: RuntimeWarning: invalid value encountered in divide\n",
+      "  probabilities /= normalizer\n",
+      " 45%|████▍     | 13/29 [00:08<00:15,  1.03it/s]e:\\Coding prac\\lib\\site-packages\\sklearn\\svm\\_base.py:1244: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n",
+      "100%|██████████| 29/29 [00:24<00:00,  1.19it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                               Accuracy  Balanced Accuracy  ROC AUC  F1 Score  \\\n",
+      "Model                                                                           \n",
+      "LGBMClassifier                     0.80               0.80     0.80      0.80   \n",
+      "NuSVC                              0.80               0.80     0.80      0.80   \n",
+      "SVC                                0.80               0.80     0.80      0.80   \n",
+      "XGBClassifier                      0.80               0.80     0.80      0.80   \n",
+      "CalibratedClassifierCV             0.79               0.79     0.79      0.79   \n",
+      "LogisticRegression                 0.79               0.79     0.79      0.79   \n",
+      "AdaBoostClassifier                 0.79               0.79     0.79      0.79   \n",
+      "LinearSVC                          0.79               0.79     0.79      0.79   \n",
+      "RandomForestClassifier             0.79               0.79     0.79      0.79   \n",
+      "LabelSpreading                     0.79               0.79     0.79      0.79   \n",
+      "LabelPropagation                   0.79               0.79     0.79      0.78   \n",
+      "ExtraTreesClassifier               0.79               0.79     0.79      0.79   \n",
+      "PassiveAggressiveClassifier        0.78               0.79     0.79      0.78   \n",
+      "SGDClassifier                      0.78               0.78     0.78      0.78   \n",
+      "KNeighborsClassifier               0.77               0.77     0.77      0.77   \n",
+      "BaggingClassifier                  0.77               0.77     0.77      0.77   \n",
+      "BernoulliNB                        0.76               0.76     0.76      0.76   \n",
+      "NearestCentroid                    0.75               0.75     0.75      0.75   \n",
+      "ExtraTreeClassifier                0.74               0.74     0.74      0.74   \n",
+      "DecisionTreeClassifier             0.73               0.73     0.73      0.73   \n",
+      "LinearDiscriminantAnalysis         0.73               0.73     0.73      0.73   \n",
+      "RidgeClassifier                    0.73               0.73     0.73      0.73   \n",
+      "RidgeClassifierCV                  0.73               0.73     0.73      0.73   \n",
+      "QuadraticDiscriminantAnalysis      0.71               0.71     0.71      0.69   \n",
+      "GaussianNB                         0.69               0.69     0.69      0.67   \n",
+      "Perceptron                         0.67               0.67     0.67      0.66   \n",
+      "DummyClassifier                    0.49               0.50     0.50      0.32   \n",
+      "\n",
+      "                               Time Taken  \n",
+      "Model                                      \n",
+      "LGBMClassifier                       0.41  \n",
+      "NuSVC                                5.77  \n",
+      "SVC                                  5.74  \n",
+      "XGBClassifier                        0.88  \n",
+      "CalibratedClassifierCV               1.55  \n",
+      "LogisticRegression                   0.04  \n",
+      "AdaBoostClassifier                   0.36  \n",
+      "LinearSVC                            0.41  \n",
+      "RandomForestClassifier               2.32  \n",
+      "LabelSpreading                       2.90  \n",
+      "LabelPropagation                     2.01  \n",
+      "ExtraTreesClassifier                 0.78  \n",
+      "PassiveAggressiveClassifier          0.08  \n",
+      "SGDClassifier                        0.11  \n",
+      "KNeighborsClassifier                 0.19  \n",
+      "BaggingClassifier                    0.24  \n",
+      "BernoulliNB                          0.02  \n",
+      "NearestCentroid                      0.02  \n",
+      "ExtraTreeClassifier                  0.04  \n",
+      "DecisionTreeClassifier               0.05  \n",
+      "LinearDiscriminantAnalysis           0.03  \n",
+      "RidgeClassifier                      0.07  \n",
+      "RidgeClassifierCV                    0.07  \n",
+      "QuadraticDiscriminantAnalysis        0.05  \n",
+      "GaussianNB                           0.02  \n",
+      "Perceptron                           0.08  \n",
+      "DummyClassifier                      0.02  \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "lazy_classifier = LazyClassifier(verbose=0, ignore_warnings=True, custom_metric=None, predictions=False, random_state=42, classifiers='all')\n",
+    "\n",
+    "models, lazy_predictions = lazy_classifier.fit(train_features, test_features, train_labels, test_labels)\n",
+    "print(models)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using Light Gradient Boosting Machine (LGBM classifier) model "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'learning_rate': 0.15,\n",
+       " 'max_depth': 10,\n",
+       " 'n_estimators': 60,\n",
+       " 'objective': 'binary'}"
+      ]
+     },
+     "execution_count": 178,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "param_grid = {'n_estimators':[40,60,80],\n",
+    "                'max_depth': [-1,10,12,15],\n",
+    "                'learning_rate': [0.1,0.15,0.2],\n",
+    "                'objective': ['binary']}\n",
+    "\n",
+    "lg = lgbm.LGBMClassifier()\n",
+    "lg_CV = GridSearchCV(estimator = lg, param_grid = param_grid, cv = 5)\n",
+    "\n",
+    "lg_CV.fit(train_features,train_labels)\n",
+    "\n",
+    "lg_CV.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy : 0.8073605520414031\n"
+     ]
+    }
+   ],
+   "source": [
+    "lg_final = lgbm.LGBMClassifier( learning_rate = 0.15,\n",
+    "                            max_depth = 10,\n",
+    "                            n_estimators = 60,\n",
+    "                            objective = 'binary')\n",
+    "lg_final.fit(train_features, train_labels)\n",
+    "test_predictions = lg_final.predict(test_features)\n",
+    "\n",
+    "print(f'Accuracy : {accuracy_score(test_labels, test_predictions)}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lg_final.fit(train_data,train_data_og['Transported'])\n",
+    "final_predictions = lg_final.predict(test_data)\n",
+    "result = pd.DataFrame({\"PassengerId\":test_data_og['PassengerId'],\n",
+    "                        'Transported': final_predictions.astype(bool)})\n",
+    "result.to_csv('./final_submission.csv',index=False)\n",
+    "# score is 0.79003"
    ]
   }
  ],
