--- a/NLP with disaster tweets/disaster_tweets.ipynb
+++ b/NLP with disaster tweets/disaster_tweets.ipynb
@@ -161,17 +161,17 @@
     "# Feature Engineering\n",
     "* (DONE) perform word tokenization\n",
     "* (DONE) Remove stop words\n",
-    "* Remove https links\n",
+    "* (DONE) Remove https links\n",
     "* (DONE) Remove punctuations\n",
     "* (DONE) lowercase strings\n",
     "* (DONE) apply stemming : reducing words to their root words\n",
-    "* apply lemmatization?\n",
+    "* apply lemmatization? Study more about this\n",
     "* vectorization: Bag of Words"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -179,63 +179,63 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_ed461\">\n",
+       "<table id=\"T_2f0e0\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_ed461_level0_col0\" class=\"col_heading level0 col0\" >id</th>\n",
-       "      <th id=\"T_ed461_level0_col1\" class=\"col_heading level0 col1\" >keyword</th>\n",
-       "      <th id=\"T_ed461_level0_col2\" class=\"col_heading level0 col2\" >location</th>\n",
-       "      <th id=\"T_ed461_level0_col3\" class=\"col_heading level0 col3\" >text</th>\n",
-       "      <th id=\"T_ed461_level0_col4\" class=\"col_heading level0 col4\" >target</th>\n",
+       "      <th id=\"T_2f0e0_level0_col0\" class=\"col_heading level0 col0\" >id</th>\n",
+       "      <th id=\"T_2f0e0_level0_col1\" class=\"col_heading level0 col1\" >keyword</th>\n",
+       "      <th id=\"T_2f0e0_level0_col2\" class=\"col_heading level0 col2\" >location</th>\n",
+       "      <th id=\"T_2f0e0_level0_col3\" class=\"col_heading level0 col3\" >text</th>\n",
+       "      <th id=\"T_2f0e0_level0_col4\" class=\"col_heading level0 col4\" >target</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_ed461_level0_row0\" class=\"row_heading level0 row0\" >5828</th>\n",
-       "      <td id=\"T_ed461_row0_col0\" class=\"data row0 col0\" >8321</td>\n",
-       "      <td id=\"T_ed461_row0_col1\" class=\"data row0 col1\" >rubble</td>\n",
-       "      <td id=\"T_ed461_row0_col2\" class=\"data row0 col2\" >Spain - China - Latin America.</td>\n",
-       "      <td id=\"T_ed461_row0_col3\" class=\"data row0 col3\" >['china', \"'s\", 'stock', 'market', 'crash', 'gem', 'rubbl', 'china\\x89ûª', 'stock', 'market', 'crash', 'summer', 'h', '...', 'http', '//t.co/pe2r3ln16o', '.forb']</td>\n",
-       "      <td id=\"T_ed461_row0_col4\" class=\"data row0 col4\" >0</td>\n",
+       "      <th id=\"T_2f0e0_level0_row0\" class=\"row_heading level0 row0\" >4060</th>\n",
+       "      <td id=\"T_2f0e0_row0_col0\" class=\"data row0 col0\" >5769</td>\n",
+       "      <td id=\"T_2f0e0_row0_col1\" class=\"data row0 col1\" >forest%20fires</td>\n",
+       "      <td id=\"T_2f0e0_row0_col2\" class=\"data row0 col2\" >nan</td>\n",
+       "      <td id=\"T_2f0e0_row0_col3\" class=\"data row0 col3\" >['heartdiseas', 'forest', 'servic', 'say', 'spend', 'half', 'budget', 'fire']</td>\n",
+       "      <td id=\"T_2f0e0_row0_col4\" class=\"data row0 col4\" >1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ed461_level0_row1\" class=\"row_heading level0 row1\" >1200</th>\n",
-       "      <td id=\"T_ed461_row1_col0\" class=\"data row1 col0\" >1726</td>\n",
-       "      <td id=\"T_ed461_row1_col1\" class=\"data row1 col1\" >buildings%20burning</td>\n",
-       "      <td id=\"T_ed461_row1_col2\" class=\"data row1 col2\" >nan</td>\n",
-       "      <td id=\"T_ed461_row1_col3\" class=\"data row1 col3\" >['kou', 'like', 'cash', 'regist', 'build', 'burn']</td>\n",
-       "      <td id=\"T_ed461_row1_col4\" class=\"data row1 col4\" >0</td>\n",
+       "      <th id=\"T_2f0e0_level0_row1\" class=\"row_heading level0 row1\" >3028</th>\n",
+       "      <td id=\"T_2f0e0_row1_col0\" class=\"data row1 col0\" >4349</td>\n",
+       "      <td id=\"T_2f0e0_row1_col1\" class=\"data row1 col1\" >earthquake</td>\n",
+       "      <td id=\"T_2f0e0_row1_col2\" class=\"data row1 col2\" >Earth</td>\n",
+       "      <td id=\"T_2f0e0_row1_col3\" class=\"data row1 col3\" >['earthquak', 'occur', 'near', 'mount', 'helen', 'area', 'washington', 'utc', 'earthquak']</td>\n",
+       "      <td id=\"T_2f0e0_row1_col4\" class=\"data row1 col4\" >1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ed461_level0_row2\" class=\"row_heading level0 row2\" >6840</th>\n",
-       "      <td id=\"T_ed461_row2_col0\" class=\"data row2 col0\" >9797</td>\n",
-       "      <td id=\"T_ed461_row2_col1\" class=\"data row2 col1\" >trapped</td>\n",
-       "      <td id=\"T_ed461_row2_col2\" class=\"data row2 col2\" >nan</td>\n",
-       "      <td id=\"T_ed461_row2_col3\" class=\"data row2 col3\" >['hollywood', 'movi', 'trap', 'miner', 'releas', 'chile', \"'the\", 'hollywood', 'movi', 'trap', 'miner', 'star', '...', 'http', '//t.co/0f8xa4ih1u']</td>\n",
-       "      <td id=\"T_ed461_row2_col4\" class=\"data row2 col4\" >1</td>\n",
+       "      <th id=\"T_2f0e0_level0_row2\" class=\"row_heading level0 row2\" >4478</th>\n",
+       "      <td id=\"T_2f0e0_row2_col0\" class=\"data row2 col0\" >6370</td>\n",
+       "      <td id=\"T_2f0e0_row2_col1\" class=\"data row2 col1\" >hostages</td>\n",
+       "      <td id=\"T_2f0e0_row2_col2\" class=\"data row2 col2\" >nan</td>\n",
+       "      <td id=\"T_2f0e0_row2_col3\" class=\"data row2 col3\" >['new', 'free', 'porn', 'clip', 'take', 'hostag', 'danger', 'favor', 'free', 'adult', 'sex', 'tube']</td>\n",
+       "      <td id=\"T_2f0e0_row2_col4\" class=\"data row2 col4\" >0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ed461_level0_row3\" class=\"row_heading level0 row3\" >1837</th>\n",
-       "      <td id=\"T_ed461_row3_col0\" class=\"data row3 col0\" >2642</td>\n",
-       "      <td id=\"T_ed461_row3_col1\" class=\"data row3 col1\" >crashed</td>\n",
-       "      <td id=\"T_ed461_row3_col2\" class=\"data row3 col2\" >too far</td>\n",
-       "      <td id=\"T_ed461_row3_col3\" class=\"data row3 col3\" >['.4', 'second', 'faster', 'overtook', 'twice', 'crash', 'tru', 'luv', 'lt', 'lt']</td>\n",
-       "      <td id=\"T_ed461_row3_col4\" class=\"data row3 col4\" >0</td>\n",
+       "      <th id=\"T_2f0e0_level0_row3\" class=\"row_heading level0 row3\" >5368</th>\n",
+       "      <td id=\"T_2f0e0_row3_col0\" class=\"data row3 col0\" >7659</td>\n",
+       "      <td id=\"T_2f0e0_row3_col1\" class=\"data row3 col1\" >panic</td>\n",
+       "      <td id=\"T_2f0e0_row3_col2\" class=\"data row3 col2\" >Narnia</td>\n",
+       "      <td id=\"T_2f0e0_row3_col3\" class=\"data row3 col3\" >['ad', 'video', 'youtub', 'playlist', 'panic', 'disco', 'girlsgirlsboy', 'offici', 'video']</td>\n",
+       "      <td id=\"T_2f0e0_row3_col4\" class=\"data row3 col4\" >0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ed461_level0_row4\" class=\"row_heading level0 row4\" >1014</th>\n",
-       "      <td id=\"T_ed461_row4_col0\" class=\"data row4 col0\" >1473</td>\n",
-       "      <td id=\"T_ed461_row4_col1\" class=\"data row4 col1\" >body%20bagging</td>\n",
-       "      <td id=\"T_ed461_row4_col2\" class=\"data row4 col2\" >nan</td>\n",
-       "      <td id=\"T_ed461_row4_col3\" class=\"data row4 col3\" >['\\x89ûï', 'macdaddy_leo', 'caption', 'need', 'freshman', '...', 'http', '//t.co/k8ughv2aif\\x89û\\x9dmi', 'nigga', 'stacey', 'bodi', 'bag', 'nigga']</td>\n",
-       "      <td id=\"T_ed461_row4_col4\" class=\"data row4 col4\" >1</td>\n",
+       "      <th id=\"T_2f0e0_level0_row4\" class=\"row_heading level0 row4\" >485</th>\n",
+       "      <td id=\"T_2f0e0_row4_col0\" class=\"data row4 col0\" >702</td>\n",
+       "      <td id=\"T_2f0e0_row4_col1\" class=\"data row4 col1\" >attacked</td>\n",
+       "      <td id=\"T_2f0e0_row4_col2\" class=\"data row4 col2\" >Texas, USA</td>\n",
+       "      <td id=\"T_2f0e0_row4_col3\" class=\"data row4 col3\" >['messeymetoo', 'feel', 'attack']</td>\n",
+       "      <td id=\"T_2f0e0_row4_col4\" class=\"data row4 col4\" >0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x190bd3bd0a0>"
+       "<pandas.io.formats.style.Styler at 0x190bdfe4eb0>"
       ]
      },
      "metadata": {},
@@ -244,18 +244,102 @@
    ],
    "source": [
     "train_data = train_data_og.copy()\n",
+    "\n",
+    "train_data= train_data.replace(to_replace= {'text':{r'http\\S+':'',r'[0-9]+':'',r'[^A-Za-z0-9 ]+':''}}, regex=True)\n",
+    "\n",
     "train_data['text'] = train_data['text'].str.lower().apply(word_tokenize)\n",
     "\n",
     "stopwords_en = set(stopwords.words('english'))\n",
     "punctuation_en = set(punctuation)\n",
     "stopwords_punctuations_en = stopwords_en.union(punctuation_en)\n",
     "\n",
-    "train_data['text'] = train_data['text'].apply(lambda x: [word for word in x if word not in stopwords_punctuations_en and not word.isdigit()])\n",
+    "train_data['text'] = train_data['text'].apply(lambda x: [word for word in x if word not in stopwords_punctuations_en and len(word)>2 ])\n",
     "\n",
     "porter = PorterStemmer()\n",
     "train_data['text'] = train_data['text'].apply(lambda x : [porter.stem(word) for word in x ] )\n",
     "\n",
     "display(train_data.sample(n=5).style)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "</style>\n",
+       "<table id=\"T_f5716\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th class=\"blank level0\" >&nbsp;</th>\n",
+       "      <th id=\"T_f5716_level0_col0\" class=\"col_heading level0 col0\" >text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th id=\"T_f5716_level0_row0\" class=\"row_heading level0 row0\" >6324</th>\n",
+       "      <td id=\"T_f5716_row0_col0\" class=\"data row0 col0\" >['stretcher', 'witter', 'rexyy', 'towel', 'show', 'pictur']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_f5716_level0_row1\" class=\"row_heading level0 row1\" >3830</th>\n",
+       "      <td id=\"T_f5716_row1_col0\" class=\"data row1 col0\" >['good', 'info', 'help', 'first', 'respond', 'cope', 'individu', 'resili', 'factsheet', 'respond']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_f5716_level0_row2\" class=\"row_heading level0 row2\" >1665</th>\n",
+       "      <td id=\"T_f5716_row2_col0\" class=\"data row2 col0\" >['like', 'youtub', 'video', 'sqwizzix', 'call', 'duti', 'piano', 'entertain', 'musician', 'collid']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_f5716_level0_row3\" class=\"row_heading level0 row3\" >2330</th>\n",
+       "      <td id=\"T_f5716_row3_col0\" class=\"data row3 col0\" >['three', 'home', 'demolish', 'unrecogn', 'arab', 'villag', 'intern', 'middl', 'east', 'media', 'center']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_f5716_level0_row4\" class=\"row_heading level0 row4\" >1470</th>\n",
+       "      <td id=\"T_f5716_row4_col0\" class=\"data row4 col0\" >['peterjuk', 'good', 'ground', 'believ', 'polit', 'militari', 'catastroph', 'crime', 'plan', 'commit', 'individu']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_f5716_level0_row5\" class=\"row_heading level0 row5\" >53</th>\n",
+       "      <td id=\"T_f5716_row5_col0\" class=\"data row5 col0\" >['polic', 'arsonist', 'deliber', 'set', 'black', 'church', 'north', 'carolinaablaz']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_f5716_level0_row6\" class=\"row_heading level0 row6\" >936</th>\n",
+       "      <td id=\"T_f5716_row6_col0\" class=\"data row6 col0\" >['blown', 'away', 'extens', 'noth', 'weve', 'seen', 'mani', 'option', 'one']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_f5716_level0_row7\" class=\"row_heading level0 row7\" >4803</th>\n",
+       "      <td id=\"T_f5716_row7_col0\" class=\"data row7 col0\" >['toxicsavior', 'loud', 'bang', 'froze', 'spot', 'slowli', 'everi', 'head', 'turn', 'toward', 'one', 'thing', 'hate']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_f5716_level0_row8\" class=\"row_heading level0 row8\" >5851</th>\n",
+       "      <td id=\"T_f5716_row8_col0\" class=\"data row8 col0\" >['well', 'done', 'everyon', 'applaud', 'terrif', 'never', 'ruin', 'anyth']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_f5716_level0_row9\" class=\"row_heading level0 row9\" >6822</th>\n",
+       "      <td id=\"T_f5716_row9_col0\" class=\"data row9 col0\" >['hollywood', 'movi', 'trap', 'miner', 'releas', 'chile', 'zippednew']</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x190ba9ee130>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['nprfreshair', 'realli', 'cant', 'believ', 'skip', 'republican', 'meltdowni', 'mean', 'debat']\n"
+     ]
+    }
+   ],
+   "source": [
+    "display(train_data[['text']].sample(n=10).style)\n",
+    "print(train_data.loc[4961,'text'])"
    ]
   },
   {
