tried different models. buggy train/test set loop

--- a/NLP with disaster tweets/disaster_tweets.ipynb
+++ b/NLP with disaster tweets/disaster_tweets.ipynb
@@ -457,7 +457,10 @@
    "source": [
     "## Score:\n",
     "* Without preprocessing: 0.79619\n",
-    "* After preprocssing: 0.79221\n"
+    "* After preprocssing: 0.79221\n",
+    "\n",
+    "Observations:  \n",
+    "* Preprocessing did not help much. maybe try different vectorization techniques.\n"
    ]
   }
  ],
