applied TFIDF and debugged

--- a/NLP with disaster tweets/disaster_tweets.ipynb
+++ b/NLP with disaster tweets/disaster_tweets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 417,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,7 @@
     "\n",
     "# models\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.naive_bayes import ComplementNB\n",
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 418,
    "metadata": {},
    "outputs": [
     {
@@ -134,78 +135,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 419,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style type=\"text/css\">\n",
-       "</style>\n",
-       "<table id=\"T_8a60d\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_8a60d_level0_col0\" class=\"col_heading level0 col0\" >id</th>\n",
-       "      <th id=\"T_8a60d_level0_col1\" class=\"col_heading level0 col1\" >keyword</th>\n",
-       "      <th id=\"T_8a60d_level0_col2\" class=\"col_heading level0 col2\" >location</th>\n",
-       "      <th id=\"T_8a60d_level0_col3\" class=\"col_heading level0 col3\" >text</th>\n",
-       "      <th id=\"T_8a60d_level0_col4\" class=\"col_heading level0 col4\" >target</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th id=\"T_8a60d_level0_row0\" class=\"row_heading level0 row0\" >7565</th>\n",
-       "      <td id=\"T_8a60d_row0_col0\" class=\"data row0 col0\" >10814</td>\n",
-       "      <td id=\"T_8a60d_row0_col1\" class=\"data row0 col1\" >wrecked</td>\n",
-       "      <td id=\"T_8a60d_row0_col2\" class=\"data row0 col2\" >nan</td>\n",
-       "      <td id=\"T_8a60d_row0_col3\" class=\"data row0 col3\" >Wrecked tired but not gonna be asleep before 3??</td>\n",
-       "      <td id=\"T_8a60d_row0_col4\" class=\"data row0 col4\" >0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_8a60d_level0_row1\" class=\"row_heading level0 row1\" >4883</th>\n",
-       "      <td id=\"T_8a60d_row1_col0\" class=\"data row1 col0\" >6953</td>\n",
-       "      <td id=\"T_8a60d_row1_col1\" class=\"data row1 col1\" >massacre</td>\n",
-       "      <td id=\"T_8a60d_row1_col2\" class=\"data row1 col2\" >St. Louis, Mo</td>\n",
-       "      <td id=\"T_8a60d_row1_col3\" class=\"data row1 col3\" >This Friday!! Palm Beach County #Grindhouse Series one night screening of  #TexasChainsawMassacre http://t.co/1WopsGbVvv @morbidmovies</td>\n",
-       "      <td id=\"T_8a60d_row1_col4\" class=\"data row1 col4\" >0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_8a60d_level0_row2\" class=\"row_heading level0 row2\" >804</th>\n",
-       "      <td id=\"T_8a60d_row2_col0\" class=\"data row2 col0\" >1167</td>\n",
-       "      <td id=\"T_8a60d_row2_col1\" class=\"data row2 col1\" >blight</td>\n",
-       "      <td id=\"T_8a60d_row2_col2\" class=\"data row2 col2\" >Vancouver, BC</td>\n",
-       "      <td id=\"T_8a60d_row2_col3\" class=\"data row2 col3\" >@parksboardfacts first off it is the #ZippoLine as no one wants to use it and the community never asked for this blight on the park #moveit</td>\n",
-       "      <td id=\"T_8a60d_row2_col4\" class=\"data row2 col4\" >0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_8a60d_level0_row3\" class=\"row_heading level0 row3\" >4218</th>\n",
-       "      <td id=\"T_8a60d_row3_col0\" class=\"data row3 col0\" >5991</td>\n",
-       "      <td id=\"T_8a60d_row3_col1\" class=\"data row3 col1\" >hazardous</td>\n",
-       "      <td id=\"T_8a60d_row3_col2\" class=\"data row3 col2\" >nan</td>\n",
-       "      <td id=\"T_8a60d_row3_col3\" class=\"data row3 col3\" >http://t.co/7AzE4IoGMe Risk Assessment and Optimization for Routing Hazardous Waste Collection #sustainable environmental</td>\n",
-       "      <td id=\"T_8a60d_row3_col4\" class=\"data row3 col4\" >0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_8a60d_level0_row4\" class=\"row_heading level0 row4\" >2451</th>\n",
-       "      <td id=\"T_8a60d_row4_col0\" class=\"data row4 col0\" >3519</td>\n",
-       "      <td id=\"T_8a60d_row4_col1\" class=\"data row4 col1\" >derailment</td>\n",
-       "      <td id=\"T_8a60d_row4_col2\" class=\"data row4 col2\" >nan</td>\n",
-       "      <td id=\"T_8a60d_row4_col3\" class=\"data row4 col3\" >MP train derailment: Village youth saved many lives\n",
-       "http://t.co/lTYeFJdM3A #IndiaTV http://t.co/0La1aw9uUd</td>\n",
-       "      <td id=\"T_8a60d_row4_col4\" class=\"data row4 col4\" >1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n"
-      ],
-      "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x190851617f0>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# remove urls, numbers, eveything except strings, alphanum,hashtags and spaces.\n",
     "\n",
@@ -218,7 +150,7 @@
     "\n",
     "for dataset in combined_dataset:\n",
     "\n",
-    "    dataset= dataset.replace(to_replace= {'text':{r'http\\S+':'',r'[0-9]+':'',r'@\\S+':'', r'[^A-Za-z0-9# ]+':''}}, regex=True)\n",
+    "    dataset.replace(to_replace= {'text':{r'http\\S+':'',r'[0-9]+':'',r'@\\S+':'', r'[^A-Za-z0-9# ]+':''}}, regex=True, inplace=True)\n",
     "\n",
     "    dataset['text'] = dataset['text'].str.lower().apply(word_tokenize)\n",
     "\n",
@@ -227,8 +159,7 @@
     "    dataset['text'] = dataset['text'].apply(lambda x : ' '.join([porter.stem(word) for word in x ]) ) \n",
     "    #converting back to string because CountVectorizer accepts Sting and not list\n",
     "\n",
-    "# BUG: train,test data are not updating\n",
-    "display(combined_dataset[0].sample(n=5).style)\n"
+    "\n"
    ]
   },
   {
@@ -249,14 +180,13 @@
    "metadata": {},
    "source": [
     "# Vectorization\n",
-    "* Bag of Words\n",
-    "* TFIDF  \n",
-    "We use the preprocessing steps tested out above to create a func."
+    "* (DONE) Bag of Words\n",
+    "* (DONE) TFIDF  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 421,
    "metadata": {},
    "outputs": [
     {
@@ -264,63 +194,63 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_0dff2\">\n",
+       "<table id=\"T_913ab\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_0dff2_level0_col0\" class=\"col_heading level0 col0\" >id</th>\n",
-       "      <th id=\"T_0dff2_level0_col1\" class=\"col_heading level0 col1\" >keyword</th>\n",
-       "      <th id=\"T_0dff2_level0_col2\" class=\"col_heading level0 col2\" >location</th>\n",
-       "      <th id=\"T_0dff2_level0_col3\" class=\"col_heading level0 col3\" >text</th>\n",
-       "      <th id=\"T_0dff2_level0_col4\" class=\"col_heading level0 col4\" >target</th>\n",
+       "      <th id=\"T_913ab_level0_col0\" class=\"col_heading level0 col0\" >id</th>\n",
+       "      <th id=\"T_913ab_level0_col1\" class=\"col_heading level0 col1\" >keyword</th>\n",
+       "      <th id=\"T_913ab_level0_col2\" class=\"col_heading level0 col2\" >location</th>\n",
+       "      <th id=\"T_913ab_level0_col3\" class=\"col_heading level0 col3\" >text</th>\n",
+       "      <th id=\"T_913ab_level0_col4\" class=\"col_heading level0 col4\" >target</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_0dff2_level0_row0\" class=\"row_heading level0 row0\" >1937</th>\n",
-       "      <td id=\"T_0dff2_row0_col0\" class=\"data row0 col0\" >2785</td>\n",
-       "      <td id=\"T_0dff2_row0_col1\" class=\"data row0 col1\" >curfew</td>\n",
-       "      <td id=\"T_0dff2_row0_col2\" class=\"data row0 col2\" >253</td>\n",
-       "      <td id=\"T_0dff2_row0_col3\" class=\"data row0 col3\" >@stupid_niggr I'm telling your mom your up past curfew oth</td>\n",
-       "      <td id=\"T_0dff2_row0_col4\" class=\"data row0 col4\" >0</td>\n",
+       "      <th id=\"T_913ab_level0_row0\" class=\"row_heading level0 row0\" >2273</th>\n",
+       "      <td id=\"T_913ab_row0_col0\" class=\"data row0 col0\" >3260</td>\n",
+       "      <td id=\"T_913ab_row0_col1\" class=\"data row0 col1\" >demolish</td>\n",
+       "      <td id=\"T_913ab_row0_col2\" class=\"data row0 col2\" >State of Dreaming</td>\n",
+       "      <td id=\"T_913ab_row0_col3\" class=\"data row0 col3\" >four demolish</td>\n",
+       "      <td id=\"T_913ab_row0_col4\" class=\"data row0 col4\" >0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_0dff2_level0_row1\" class=\"row_heading level0 row1\" >1031</th>\n",
-       "      <td id=\"T_0dff2_row1_col0\" class=\"data row1 col0\" >1497</td>\n",
-       "      <td id=\"T_0dff2_row1_col1\" class=\"data row1 col1\" >body%20bags</td>\n",
-       "      <td id=\"T_0dff2_row1_col2\" class=\"data row1 col2\" >nan</td>\n",
-       "      <td id=\"T_0dff2_row1_col3\" class=\"data row1 col3\" >Attention all RCHS football players there will be coffins and body bags by the locker rooms grab one tommorow because were gonna die</td>\n",
-       "      <td id=\"T_0dff2_row1_col4\" class=\"data row1 col4\" >0</td>\n",
+       "      <th id=\"T_913ab_level0_row1\" class=\"row_heading level0 row1\" >1486</th>\n",
+       "      <td id=\"T_913ab_row1_col0\" class=\"data row1 col0\" >2142</td>\n",
+       "      <td id=\"T_913ab_row1_col1\" class=\"data row1 col1\" >catastrophe</td>\n",
+       "      <td id=\"T_913ab_row1_col2\" class=\"data row1 col2\" >Lytham St Anne's </td>\n",
+       "      <td id=\"T_913ab_row1_col3\" class=\"data row1 col3\" >god that biggest gbbo catastroph ever seen watch show</td>\n",
+       "      <td id=\"T_913ab_row1_col4\" class=\"data row1 col4\" >0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_0dff2_level0_row2\" class=\"row_heading level0 row2\" >6096</th>\n",
-       "      <td id=\"T_0dff2_row2_col0\" class=\"data row2 col0\" >8705</td>\n",
-       "      <td id=\"T_0dff2_row2_col1\" class=\"data row2 col1\" >sinking</td>\n",
-       "      <td id=\"T_0dff2_row2_col2\" class=\"data row2 col2\" >nan</td>\n",
-       "      <td id=\"T_0dff2_row2_col3\" class=\"data row2 col3\" >Currency transgress before payday-prison ward sinking-fund payment unsecured loan: jBUmZQpK</td>\n",
-       "      <td id=\"T_0dff2_row2_col4\" class=\"data row2 col4\" >0</td>\n",
+       "      <th id=\"T_913ab_level0_row2\" class=\"row_heading level0 row2\" >5810</th>\n",
+       "      <td id=\"T_913ab_row2_col0\" class=\"data row2 col0\" >8292</td>\n",
+       "      <td id=\"T_913ab_row2_col1\" class=\"data row2 col1\" >rubble</td>\n",
+       "      <td id=\"T_913ab_row2_col2\" class=\"data row2 col2\" >Columbus, Georgia</td>\n",
+       "      <td id=\"T_913ab_row2_col3\" class=\"data row2 col3\" >refus let life reduc rubbl shit keep pile get shovel</td>\n",
+       "      <td id=\"T_913ab_row2_col4\" class=\"data row2 col4\" >0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_0dff2_level0_row3\" class=\"row_heading level0 row3\" >1780</th>\n",
-       "      <td id=\"T_0dff2_row3_col0\" class=\"data row3 col0\" >2555</td>\n",
-       "      <td id=\"T_0dff2_row3_col1\" class=\"data row3 col1\" >crash</td>\n",
-       "      <td id=\"T_0dff2_row3_col2\" class=\"data row3 col2\" >nan</td>\n",
-       "      <td id=\"T_0dff2_row3_col3\" class=\"data row3 col3\" >MotoGP Indianapolis: Espargaro: Layout 'worries me a little' - http://t.co/RNy4l3sr7a http://t.co/igX8XFz8Ko</td>\n",
-       "      <td id=\"T_0dff2_row3_col4\" class=\"data row3 col4\" >0</td>\n",
+       "      <th id=\"T_913ab_level0_row3\" class=\"row_heading level0 row3\" >2516</th>\n",
+       "      <td id=\"T_913ab_row3_col0\" class=\"data row3 col0\" >3613</td>\n",
+       "      <td id=\"T_913ab_row3_col1\" class=\"data row3 col1\" >desolation</td>\n",
+       "      <td id=\"T_913ab_row3_col2\" class=\"data row3 col2\" >nan</td>\n",
+       "      <td id=\"T_913ab_row3_col3\" class=\"data row3 col3\" >kurtkamka beauti desol coupl coyot lizard morn sun phoenix ariz</td>\n",
+       "      <td id=\"T_913ab_row3_col4\" class=\"data row3 col4\" >1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_0dff2_level0_row4\" class=\"row_heading level0 row4\" >1173</th>\n",
-       "      <td id=\"T_0dff2_row4_col0\" class=\"data row4 col0\" >1690</td>\n",
-       "      <td id=\"T_0dff2_row4_col1\" class=\"data row4 col1\" >bridge%20collapse</td>\n",
-       "      <td id=\"T_0dff2_row4_col2\" class=\"data row4 col2\" >nan</td>\n",
-       "      <td id=\"T_0dff2_row4_col3\" class=\"data row4 col3\" >Two giant cranes holding a bridge collapse into nearby homes http://t.co/UmANaaHwMI</td>\n",
-       "      <td id=\"T_0dff2_row4_col4\" class=\"data row4 col4\" >1</td>\n",
+       "      <th id=\"T_913ab_level0_row4\" class=\"row_heading level0 row4\" >6260</th>\n",
+       "      <td id=\"T_913ab_row4_col0\" class=\"data row4 col0\" >8945</td>\n",
+       "      <td id=\"T_913ab_row4_col1\" class=\"data row4 col1\" >storm</td>\n",
+       "      <td id=\"T_913ab_row4_col2\" class=\"data row4 col2\" >State College, Pa</td>\n",
+       "      <td id=\"T_913ab_row4_col3\" class=\"data row4 col3\" >typhoon soudelor captur incred nasa photo way taiwan</td>\n",
+       "      <td id=\"T_913ab_row4_col4\" class=\"data row4 col4\" >1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x1908d220c70>"
+       "<pandas.io.formats.style.Styler at 0x190ee0820a0>"
       ]
      },
      "metadata": {},
@@ -331,12 +261,12 @@
      "output_type": "stream",
      "text": [
       "object\n",
-      "21637\n"
+      "11504\n"
      ]
     }
    ],
    "source": [
-    "bow = CountVectorizer(stop_words=None, analyzer='word')\n",
+    "bow = TfidfVectorizer(stop_words=None, analyzer='word')\n",
     "display(train_data.sample(n=5).style)\n",
     "print(train_data['text'].dtype)\n",
     "x = bow.fit_transform(train_data['text'])\n",
@@ -359,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 422,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +305,7 @@
     "\n",
     "train_text, test_text, train_labels, test_labels = train_test_split(train_data['text'],train_data['target'])\n",
     "\n",
-    "bow = CountVectorizer(stop_words=None, analyzer='word')\n",
+    "bow = TfidfVectorizer(stop_words=None, analyzer='word')\n",
     "train_features = bow.fit_transform(train_text)\n",
     "test_features = bow.transform(test_text)\n",
     "\n",
@@ -388,14 +318,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 423,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Complement NB classifier accuracy: 81.0%\n"
+      "Complement NB classifier accuracy: 80.0%\n"
      ]
     }
    ],
@@ -408,14 +338,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 424,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ridge classifier accuracy: 77.0%\n"
+      "Ridge classifier accuracy: 80.0%\n"
      ]
     }
    ],
@@ -436,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 425,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +390,7 @@
     "* After preprocssing: 0.79221\n",
     "\n",
     "Observations:  \n",
-    "* Preprocessing did not help much. maybe try different vectorization techniques.\n"
+    "* Preprocessing did not help much. maybe try different vectorization technique, stronger stopwords, NN model.\n"
    ]
   }
  ],
